src/styles/index.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
	padding: 0;
	margin: 0;
	border: 0;
}

*,
*:before,
*:after {
	box-sizing: border-box;
}

:focus,
:active {
	outline: none;
}

a:focus,
a:active {
	outline: none;
}

nav,
footer,
header,
aside {
	display: block;
}

html,
body,
#root {
	height: 100%;
	width: 100%;
	font-size: 100%;
	font-family: 'Mont', sans-serif;
	line-height: 1;
	font-size: 10px;
	-ms-text-size-adjust: 100%;
	-moz-text-size-adjust: 100%;
	-webkit-text-size-adjust: 100%;
	overflow-x: hidden;
}

@media (max-width: 992px) {
	html,
	body,
	#root {
		touch-action: none;
	}
}

input,
button,
textarea {
	font-family: 'Inter', sans-serif;
}

input::-ms-clear {
	display: none;
}

select {
	background-image: none;
}

button {
	cursor: pointer;
}

button::-moz-focus-inner {
	padding: 0;
	border: 0;
}

a,
a:visited {
	text-decoration: none;
}

a:hover {
	text-decoration: none;
}

ul li {
	list-style: none;
}

img {
	vertical-align: top;
}

h1,
h2,
h3,
h4,
h5,
h6 {
	font-weight: 400;
}

main {
	@apply flex flex-col justify-between h-full;
}

